@startuml database-schema-overview
!theme plain
title Figure 3.1. Database Schema Overview – MongoDB Collections

skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam defaultFontSize 11
hide circle

skinparam class {
  BackgroundColor #E3F2FD
  BorderColor #1565C0
  ArrowColor #546E7A
  HeaderBackgroundColor #1565C0
  HeaderFontColor white
}

class "users" as users <<collection>> {
  **_id**: ObjectId <<PK>>
  --
  name: String [required]
  email: String [required, unique]
  passwordHash: String [required, hidden]
  role: String [enum: Admin|Manager|Teacher|Student]
  avatar: String
  isActive: Boolean [default: true]
  createdAt: Date [auto]
  updatedAt: Date [auto]
}

class "roles" as roles <<collection>> {
  **_id**: ObjectId <<PK>>
  --
  name: String [required]
  code: String [required, unique]
  description: String
  permissions: String[]
  status: String [enum: Active|Inactive]
  isSystemRole: Boolean [default: false]
  createdBy: ObjectId <<FK → users>>
  updatedBy: ObjectId <<FK → users>>
  createdAt: Date [auto]
  updatedAt: Date [auto]
}

class "subjects" as subjects <<collection>> {
  **_id**: ObjectId <<PK>>
  --
  name: String [required]
  category: String [required]
  owner: ObjectId <<FK → users>> [required]
  thumbnail: String
  description: String
  featured: Boolean [default: false]
  status: String [enum: Draft|Published|Unpublished|Inactive]
  createdBy: ObjectId <<FK → users>>
  updatedBy: ObjectId <<FK → users>>
  createdAt: Date [auto]
  updatedAt: Date [auto]
}

class "lessons" as lessons <<collection>> {
  **_id**: ObjectId <<PK>>
  --
  subject: ObjectId <<FK → subjects>> [required]
  title: String [required]
  type: String [enum: Video|HTML|Quiz, required]
  order: Number [required, default: 1]
  videoUrl: String
  htmlContent: String
  status: String [enum: Active|Inactive]
  createdBy: ObjectId <<FK → users>>
  updatedBy: ObjectId <<FK → users>>
  createdAt: Date [auto]
  updatedAt: Date [auto]
}

class "registrations" as registrations <<collection>> {
  **_id**: ObjectId <<PK>>
  --
  student: ObjectId <<FK → users>> [required]
  subject: ObjectId <<FK → subjects>> [required]
  status: String [enum: Pending|Approved|Rejected|Cancelled]
  registeredAt: Date [default: now]
  approvedBy: ObjectId <<FK → users>>
  approvedAt: Date
  rejectedReason: String
  notes: String
  createdAt: Date [auto]
  updatedAt: Date [auto]
  --
  <<unique index: student + subject>>
}

' ── Relationships ──
subjects "owner" --> users : references
subjects "createdBy" ..> users : references
subjects "updatedBy" ..> users : references
lessons "subject" --> subjects : references
lessons "createdBy" ..> users : references
lessons "updatedBy" ..> users : references
roles "createdBy" ..> users : references
roles "updatedBy" ..> users : references
registrations "student" --> users : references
registrations "subject" --> subjects : references
registrations "approvedBy" ..> users : references

note bottom of registrations
  **Future Development:**
  Registration module is
  partially implemented.
  Full enrollment flow is
  planned for next phase.
end note

@enduml
